2005-02-28 Chris Larson <kergoth@handhelds.org>

	* tslib.pc.in: Add pkg-config file for tslib.
	* configure.ac, Makefile.am: Create tslib-$LT_RELEASE.pc, and install
	  it into the correct place.  Also change the AC_INIT 'PACKAGE' from
	  libts to tslib.  Bump the LT_REVISION, since libts has changed a fair
	  bit now, in preparation for the 1.0.0 release.
	* .cvsignore: Add *.pc to CVS ignore.

2005-02-25 Chris Larson <kergoth@handhelds.org>

	* AUTHORS: Add self to AUTHORS file.
	* configure.in: Deleted.
	* configure.ac: Bump version passed to AC_INIT, set my email address
	  as the contact point for the time being.

2005-02-16 Michael Opdenacker <michaelo@handhelds.org>

	* configure.ac, plugins/Makefile.am, plugins/linear-h2200.c: Add
	  tslib plugin to linearly scale touchscreen values for the HP iPAQ
	  h22xx.

2004-12-14 Chris Larson <kergoth@handhelds.org>

	* Files all over the tree: Apply patch to add support for using
	  the new gcc symbol visibility features that are available
	  in gcc 4.0 (and patched 3.4.x).  Also import a few m4 macros
	  and general buildsystem updates to facilitate automatic use of
	  gcc visibility if it's supported.

2004-11-22 Holger Freyther <zecke@handhelds.org>

	* plugins/dejitter.c: Sometimes after ts_open/ts_close/ts_open on
	  the first sample(s) dejitter will crash.  memset the tslib_dejitter
	  structure with zeros so djt->nr's value isn't undefined.

2004-10-19 Chris Larson <kergoth@handhelds.org>

	* Files all over the tree: Fixed up a bunch of compile warnings,
	  at least some of which actually did cause breakage for the user.

2004-07-08 Chris Larson <kergoth@handhelds.org>

	* plugins/input-raw.c: As EV_SYN can be checked for at runtime rather
	  than build time, #define it when compiling against kernel headers
	  that do not define it (2.4).

2004-01-26 Andrew Zabolotny <zap@homelink.ru>

	* README: Updated documentation on module parameters.
	* plugins/linear.c: Removed the bogus noxyswap parameter.
